記事いいね機能のajax通信コードのモジュール化

--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -21,24 +21,11 @@
     <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
     <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
     <script src="{% static 'js/content.js' %}"></script>
+    <script src="{% static 'js/base_ajax.js' %}"></script>
+    <script src="{% static 'js/article_like_ajax.js' %}"></script>
+
 <script>
 $(function(){
-  var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
-
-  // httpメソッドがリソースの読み出し->true リソースの編集->false
-  function csrfSafeMethod(method) {
-  // 下記HTTPメソッドはリソース変更しないため、CSRFTokenをヘッダに埋め込まない
-      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-  }
-
-  // ajax通信の前にリソースを更新するメソッドであればCSRFTOKENをヘッダに埋め込む
-  $.ajaxSetup({
-      beforeSend: function(xhr, settings) {
-          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-              xhr.setRequestHeader("X-CSRFToken", csrftoken);
-          }
-      }
-  });
 
     /* 記事をクリックすると、記事詳細に遷移 */
     $(document).on('click','.article',function(event){
@@ -112,75 +99,7 @@ $(function(){
   $('.article').hover(function(){
     $(this).css('cursor','pointer');
   });
-
-  /* 特定の記事にいいねを押してajax通信した後の処理
-  　　いいねボタンが赤色変わり、いいねカウントが１加算される */
-  var afterSuccessLike = function($NotLikeElement,articleId){
-    return function(data){
-      $('#id_like_article_'+articleId).val(data['id'])
-      $NotLikeElement.removeClass('not-like').addClass('already-like')
-      $NotLikeElement.children().css('color','indianred')
-      var nowLikeCount = $('#id_like_count_'+articleId).text()
-      if(!nowLikeCount){
-        nowLikeCount = "0"
-      }
-      nowLikeCount = parseInt(nowLikeCount)
-      afterLikeCount = nowLikeCount + 1 
-      $('#id_like_count_'+articleId).text(afterLikeCount)
-    }
-  }
-  
-  /* 特定の記事のいいねを解除してajax通信した後の処理
-  　　いいねボタンがグレー色に変わり、いいねカウントが１減算される */
-  var afterSuccessNotLike = function($alreadyLikeElement,article_id){
-    $alreadyLikeElement.children().css('color','')
-    $alreadyLikeElement.removeClass('already-like').addClass('not-like')
-    var nowLikeCount = $('#id_like_count_'+article_id).text()
-    nowLikeCount = parseInt(nowLikeCount)
-    afterLikeCount = nowLikeCount -1 
-    if(afterLikeCount==0){
-      afterLikeCount = ""
-    }
-    $('#id_like_count_'+article_id).text(afterLikeCount)
-  }
-
-  /* 特定の記事にいいねをつけた時のアクション
-  記事に対するいいねをajax通信でpostする */
-  $(document).on('click','.not-like',function(e){
-    e.stopPropagation();
-    $('.article').off('click')
-    var $notLikeElement = $(this)
-    articleId = $notLikeElement.next().attr('id').replace('id_like_article_','')
-        var data = new FormData();
-        data.append('article',articleId);
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/',
-          type:'POST',
-          dataType:'json',
-          data:data,
-          success:afterSuccessLike($notLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-
-  /* 記事いいねを解除した時のアクション
-     記事に対するいいねをajax通信でdeleteする */
-  $(document).on('click','.already-like',function(e){
-    e.stopPropagation();
-    var $alreadyLikeElement = $(this)
-    likeId = $alreadyLikeElement.next().val()
-    articleId = $alreadyLikeElement.next().attr('id').replace('id_like_article_','')
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/'+likeId+'/',
-          type:'DELETE',
-          dataType:'json',
-          success:afterSuccessNotLike($alreadyLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-    });
+});
 </script>
   </head>
   <body>
