--- a/app/templates/article/follower.html
+++ b/app/templates/article/follower.html
@@ -20,23 +20,9 @@
     <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
     <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
     <script src="{% static 'js/content.js' %}"></script>
+    <script src="{% static 'js/base_ajax.js' %}"></script>
     <script>
 $(function(){
-          // httpメソッドがリソースの読み出し->true リソースの編集->false
-          var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
-          // 
-          function csrfSafeMethod(method) {
-              // 下記HTTPメソッドはリソース変更しないため、CSRFTokenをヘッダに埋め込まない
-              return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-          }
-          // ajax通信の前にリソースを更新するメソッドであればCSRFTOKENをヘッダに埋め込む
-          $.ajaxSetup({
-              beforeSend: function(xhr, settings) {
-                  if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                      xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                  }
-              }
-          });
 
           /* フォローのリクエストをajax通信でpostした後の処理
           　 「フォローする」-> 「フォロー中」にボタンを変更
@@ -79,8 +65,8 @@ $(function(){
           /* 「フォロー」タンを押した後の処理
               フォロー解除をdeleteメソッドでリクエストする */
           $('body').on('click','.already-follow',function(){
-            var target = $alreadyfollowButtonElement.next().val();
             $alreadyfollowButtonElement = $(this)
+            var target = $alreadyfollowButtonElement.next().val();
             $.ajax({
               url:'http://localhost/account/relation/'+target+'/',
               type:'DELETE',
