--- a/app/templates/article/profile.html
+++ b/app/templates/article/profile.html
@@ -21,6 +21,8 @@
     <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
     <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
     <script src="{% static 'js/content.js' %}"></script>
+    <script src="{% static 'js/base_ajax.js' %}"></script>
+    <script src="{% static 'js/article_like_ajax.js' %}"></script>
     <script>
   $(function(){
     toggleFollowButton()
@@ -96,11 +98,9 @@
       }
     });
     // ajax通信処理
-    
-    
-    $(function(){
-
-      var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
+    </script>
+    <script>
+    var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
       function csrfSafeMethod(method) {
           // these HTTP methods do not require CSRF protection
           return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
@@ -112,7 +112,9 @@
               }
           }
       });
-
+    </script>
+    <script>
+    $(function(){
       var afterSuccessGetProfile = function(data){
         var introduction = data['0']['introduction'];
         var name = data['0']['user']['name']
@@ -182,18 +184,6 @@
       });
     });
     $(function(){
-      var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
-      function csrfSafeMethod(method) {
-          // these HTTP methods do not require CSRF protection
-          return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-      }
-      $.ajaxSetup({
-          beforeSend: function(xhr, settings) {
-              if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                  xhr.setRequestHeader("X-CSRFToken", csrftoken);
-              }
-          }
-      });
       var afterSuccessFollow = function(data){
         relationId = data['id']
         if(relationId){
@@ -235,68 +225,7 @@
           contentType:false,
         })
       });
-
-    var afterSuccessLike = function($notLikeElement,articleId){
-    return function(data){
-      $('#id_like_article_'+articleId).val(data['id'])
-      $notLikeElement.removeClass('not-like').addClass('already-like')
-      $notLikeElement.children().css('color','indianred')
-      var nowLikeCount = $('#id_like_count_'+articleId).text()
-      if(!nowLikeCount){
-        nowLikeCount = "0"
-      }
-      nowLikeCount = parseInt(nowLikeCount)
-      afterLikeCount = nowLikeCount + 1 
-      $('#id_like_count_'+articleId).text(afterLikeCount)
-    }
-  }
-  var afterSuccessNotLike = function($alreadyLikeElement,articleId){
-    $alreadyLikeElement.children().css('color','')
-    $alreadyLikeElement.removeClass('already-like').addClass('not-like')
-    var nowLikeCount = $('#id_like_count_'+articleId).text()
-    nowLikeCount = parseInt(nowLikeCount)
-    afterLikeCount = nowLikeCount -1 
-    if(afterLikeCount==0){
-      afterLikeCount = ""
-    }
-    $('#id_like_count_'+articleId).text(afterLikeCount)
-  }
-
-  // 記事にいいねをつける機能
-  $(document).on('click','.not-like',function(e){
-    e.stopPropagation();
-    $('.article').off('click')
-    var $notLikeElement = $(this)
-    var articleId = $notLikeElement.next().attr('id').replace('id_like_article_','')
-        var data = new FormData();
-        data.append('article',articleId);
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/',
-          type:'POST',
-          dataType:'json',
-          data:data,
-          success:afterSuccessLike($notLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-
-  // 記事にいいねを解除する
-  $(document).on('click','.already-like',function(e){
-    e.stopPropagation();
-    var $alreadyLikeElement = $(this)
-    var likeId = $alreadyLikeElement.next().val()
-    var articleId = $alreadyLikeElement.next().attr('id').replace('id_like_article_','')
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/'+likeId+'/',
-          type:'DELETE',
-          dataType:'json',
-          success:afterSuccessNotLike($alreadyLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-        });
+    });
     </script>
   </head>
   <body>
