--- a/app/templates/article/like.html
+++ b/app/templates/article/like.html
@@ -21,6 +21,8 @@
     <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
     <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
     <script src="{% static 'js/content.js' %}"></script>
+    <script src="{% static 'js/base_ajax.js' %}"></script>
+    <script src="{% static 'js/article_like_ajax.js' %}"></script>
     <script>
 $(function(){
   /* プロフィール画面のフォローボタンの初期化
@@ -101,21 +103,6 @@ $(function(){
 
   $(function(){
 
-    // httpメソッドがリソースの読み出し->true リソースの編集->false
-    var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
-    function csrfSafeMethod(method) {
-    // 下記HTTPメソッドはリソース変更しないため、CSRFTokenをヘッダに埋め込まない
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    // ajax通信の前にリソースを更新するメソッドであればCSRFTOKENをヘッダに埋め込む
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            }
-        }
-    });
-
     //ログインユーザのプロフィール画像を取得後、プロフィール編集フォームに表示する
     var afterSuccessGetProfile = function(data){
       var introduction = data['0']['introduction'];
@@ -188,18 +175,6 @@ $(function(){
     });
   });
   $(function(){
-    var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            }
-        }
-    });
     var afterSuccessFollow = function(data){
       relationId = data['id']
       if(relationId){
@@ -241,67 +216,7 @@ $(function(){
         contentType:false,
       })
     });
-  var afterSuccessLike = function($notLikeElement,articleId){
-    return function(data){
-      $('#id_like_article_'+articleId).val(data['id'])
-      $notLikeElement.removeClass('not-like').addClass('already-like')
-      $notLikeElement.children().css('color','indianred')
-      var nowLikeCount = $('#id_like_count_'+articleId).text()
-      if(!nowLikeCount){
-        nowLikeCount = "0"
-      }
-      nowLikeCount = parseInt(nowLikeCount)
-      afterLikeCount = nowLikeCount + 1 
-      $('#id_like_count_'+articleId).text(afterLikeCount)
-    }
-  }
-  var afterSuccessNotLike = function($alreadyLikeElement,articleId){
-    $alreadyLikeElement.children().css('color','')
-    $alreadyLikeElement.removeClass('already-like').addClass('not-like')
-    var nowLikeCount = $('#id_like_count_'+articleId).text()
-    nowLikeCount = parseInt(nowLikeCount)
-    afterLikeCount = nowLikeCount -1 
-    if(afterLikeCount==0){
-      afterLikeCount = ""
-    }
-    $('#id_like_count_'+articleId).text(afterLikeCount)
-  }
-
-  // 記事にいいねをつける機能
-  $(document).on('click','.not-like',function(e){
-    e.stopPropagation();
-    $('.article').off('click')
-    var $notLikeElement = $(this)
-    var articleId = $notLikeElement.next().attr('id').replace('id_like_article_','')
-        var data = new FormData();
-        data.append('article',articleId);
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/',
-          type:'POST',
-          dataType:'json',
-          data:data,
-          success:afterSuccessLike($notLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-
-  // 記事にいいねを解除する
-  $(document).on('click','.already-like',function(e){
-    e.stopPropagation();
-    var $alreadyLikeElement = $(this)
-    var likeId = $alreadyLikeElement.next().val()
-    var articleId = $alreadyLikeElement.next().attr('id').replace('id_like_article_','')
-        $.ajax({
-          url:'http://localhost/article/favoriteArticle/'+likeId+'/',
-          type:'DELETE',
-          dataType:'json',
-          success:afterSuccessNotLike($alreadyLikeElement,articleId),
-          processData:false,
-          contentType:false,
-        })
-      })
-    });
+  });
     </script>
   </head>
   <body>
