--- a/app/templates/article/message.html
+++ b/app/templates/article/message.html
@@ -23,6 +23,7 @@
 <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
 <script src="{% static 'js/content.js' %}"></script>
 <script src="{% static 'js/base_ajax.js' %}"></script>
+<script src="{% static 'js/test.js' %}"></script>
 
 <body>
 	<script>
@@ -141,7 +142,8 @@
 						role="tab">Profile</a>
 					<a class="nav-link active" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}"
 						role="tab">Messages</a>
-					<a class="nav-link" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
+					<a class="nav-link on-implementing" id="v-pills-settings-tab" href="#v-pills-settings"
+						role="tab">Settings</a>
 				</div>
 			</div>
 			<div class="col-4">
