--- a/app/templates/article/comment_of_article.html
+++ b/app/templates/article/comment_of_article.html
@@ -25,6 +25,7 @@
 <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
 <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
 <script src="{% static 'js/base_ajax.js' %}"></script>
+<script src="{% static 'js/test.js' %}"></script>
 
 <script>
   $(function () {
@@ -460,7 +461,7 @@
             <!-- リツイート数とライク数 -->
             <div class="card-body border">
               <div class="row h-25">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center on-implementing">
                   <a href="#" class="link-black">3 retweets</a>
                 </div>
                 {% if article_info.article.favorite_article.all %}
@@ -482,7 +483,7 @@
               <hr>
               <div class="row">
                 <div class="col-md-4 text-center">
-                  <span class="text-lg" style="cursor: pointer;"><i class="fas fa-retweet"></i></span>
+                  <span class="text-lg on-implementing" style="cursor: pointer;"><i class="fas fa-retweet"></i></span>
                 </div>
                 <div class="col-md-4 text-center">
                   {% if article_info.is_login_user_like %}
@@ -654,9 +655,8 @@
                     </div>
                     <div class="row" style='margin:0;'>
                       <div class="col-md-4 text-center">
-                        <span class="link-black text-lg"><i class="fas fa-retweet"></i></span>
+                        <span class="link-black text-lg on-implementing"><i class="fas fa-retweet"></i></span>
                       </div>
-
                       <!-- コメントへのいいね表示 -->
                       <div class="col-md-4 text-center align-bottom">
                         {% if comment_dto.is_login_user_like_comment %}
@@ -679,9 +679,8 @@
                         {% endif %}
                       </div>
                       <!-- コメントへのいいね表示 -->
-
                       <div class="col-md-4 text-center">
-                        <span class="link-black text-lg">
+                        <span class="link-black text-lg on-implementing">
                           <i class="far fa-comments"></i>
                         </span>
                       </div>
@@ -701,7 +700,7 @@
           <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
             aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"
+            <span class="input-group-text on-implementing" id="basic-addon2"><i class="fas fa-search"
                 style="font-size: 24px;"></i></span>
           </div>
         </div>
