--- a/app/templates/article/following.html
+++ b/app/templates/article/following.html
@@ -24,6 +24,7 @@
   <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
   <script src="{% static 'js/content.js' %}"></script>
   <script src="{% static 'js/base_ajax.js' %}"></script>
+  <script src="{% static 'js/test.js' %}"></script>
   <script>
     $(function () {
       /* プロフィール画像のアクション発火(click、pointer) */
@@ -124,8 +125,8 @@
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <a class="nav-link" id="v-pills-home-tab" href="{% url 'article:article' %}" role="tab">Home</a>
           <a class="nav-link active" id="v-pills-profile-tab" href="#v-pills-profile" role="tab">Profile</a>
-          <a class="nav-link" id="v-pills-messages-tab" href="#v-pills-messages" role="tab">Messages</a>
-          <a class="nav-link" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
+          <a class="nav-link" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab">Messages</a>
+          <a class="nav-link on-implementing" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
         </div>
       </div>
       <div class="col-5">
@@ -198,7 +199,7 @@
           <input type="text" class="form-control" placeholder="Find Friends" aria-label="Recipient's username"
             aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"
+            <span class="input-group-text on-implementing" id="basic-addon2"><i class="fas fa-search"
                 style="font-size: 24px;"></i></span>
           </div>
         </div>
