--- a/app/templates/article/like.html
+++ b/app/templates/article/like.html
@@ -26,6 +26,8 @@
   <script src="{% static 'js/content.js' %}"></script>
   <script src="{% static 'js/base_ajax.js' %}"></script>
   <script src="{% static 'js/article_like_ajax.js' %}"></script>
+  <script src="{% static 'js/test.js' %}"></script>
+
   <script>
     $(function () {
       /* プロフィール画面のフォローボタンの初期化
@@ -249,8 +251,8 @@
           <a class="nav-link" id="v-pills-home-tab" href="{% url 'article:article' %}" role="tab">Home</a>
           <a class="nav-link active" id="v-pills-profile-tab" href="{% url 'account:profile' user.id %}"
             role="tab">Profile</a>
-          <a class="nav-link" id="v-pills-messages-tab" href="#v-pills-messages" role="tab">Messages</a>
-          <a class="nav-link" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
+          <a class="nav-link" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab">Messages</a>
+          <a class="nav-link on-implementing" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
         </div>
       </div>
       <div class="col-5">
@@ -459,7 +461,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-4 text-center">
-                        <span class="link-black text-lg mr-2 text-left">
+                        <span class="link-black text-lg mr-2 text-left on-implementing">
                           <i class="fas fa-retweet mr-1"></i>
                         </span>
                       </div>
@@ -473,7 +475,7 @@
                           id="id_like_count_{{article_info.article.id}}">{{ article_info.article.favorite_article.all.count }}</span>
                       </div>
                       <div class="col-md-4 text-center">
-                        <a class="link-black text-lg">
+                        <a class="link-black text-lg on-implementing">
                           <i class="far fa-comments mr-1"></i>
                           {% if article_info.article.comment.all.count != 0 %}
                           {{ article_info.article.comment.all.count }}
@@ -496,7 +498,7 @@
           <input type="text" class="form-control" placeholder="Find Friends" aria-label="Recipient's username"
             aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"
+            <span class="input-group-text on-implementing" id="basic-addon2"><i class="fas fa-search"
                 style="font-size: 24px;"></i></span>
           </div>
         </div>
