--- a/app/templates/article/signup.html
+++ b/app/templates/article/signup.html
@@ -23,6 +23,7 @@
   <script src="{% static 'admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
   <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
   <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
+  <script src="{% static 'js/test.js' %}"></script>
   <script src="{% static 'js/content.js' %}"></script>
   <script>
     $(function () {
@@ -86,10 +87,10 @@
                     <button type="submit" class="btn btn-primary btn-block rounded-pill">アカウントを作成</button>
                     <div class="social-auth-links text-center mb-3">
                       <p>- OR -</p>
-                      <a href="#" class="btn btn-block btn-outline-primary">
+                      <a href="#" class="btn btn-block btn-outline-primary on-implementing">
                         <i class="fab fa-facebook mr-2"></i>Facebookアカウントで登録
                       </a>
-                      <a href="#" class="btn btn-block btn-outline-danger">
+                      <a href="#" class="btn btn-block btn-outline-danger on-implementing">
                         <i class="fab fa-google-plus mr-2"></i>Googleアカウントで登録
                       </a>
                     </div>
