--- a/app/templates/article/follower.html
+++ b/app/templates/article/follower.html
@@ -57,7 +57,7 @@
         var data = new FormData();
         data.append('target', target);
         $.ajax({
-          url: 'http://localhost/api/relation/',
+          url: '/api/relation/',
           type: 'POST',
           dataType: 'json',
           data: data,
@@ -72,7 +72,7 @@
         $alreadyfollowButtonElement = $(this)
         var target = $alreadyfollowButtonElement.next().val();
         $.ajax({
-          url: 'http://localhost/api/relation/' + target + '/',
+          url: '/api/relation/' + target + '/',
           type: 'DELETE',
           success: afterSuccessUnfollow($alreadyfollowButtonElement),
           processData: false,
