--- a/app/templates/article/message.html
+++ b/app/templates/article/message.html
@@ -108,7 +108,7 @@
 				data.append("body", messageBody);
 				data.append("talk_room", talkRoomId);
 				$.ajax({
-					url: "http://localhost/api/message/",
+					url: "/api/message/",
 					type: "POST",
 					dataType: "json",
 					data: data,
