--- a/app/templates/article/profile.html
+++ b/app/templates/article/profile.html
@@ -135,7 +135,7 @@
       //ユーザのプロフィールをgetするための処理
       $('#id_user_profile').on('click', function () {
         $.ajax({
-          url: 'http://localhost/api/profileEdit/',
+          url: '/api/profileEdit/',
           type: 'GET',
           success: afterSuccessGetProfile,
         });
@@ -179,7 +179,7 @@
           return;
         }
         $.ajax({
-          url: 'http://localhost/api/profileEdit/{{user_profile.id}}/',
+          url: '/api/profileEdit/{{user_profile.id}}/',
           type: 'PATCH',
           dataType: 'json',
           data: data,
@@ -213,7 +213,7 @@
         var data = new FormData();
         data.append('target', target);
         $.ajax({
-          url: 'http://localhost/api/relation/',
+          url: '/api/relation/',
           type: 'POST',
           dataType: 'json',
           data: data,
@@ -225,7 +225,7 @@
       $('#id_unrelate_button').on('click', function () {
         var relationId = $("#id_relation_id_port").val()
         $.ajax({
-          url: 'http://localhost/api/relation/' + relationId + '/',
+          url: '/api/relation/' + relationId + '/',
           type: 'DELETE',
           success: afterSuccessUnfollow,
           processData: false,
